# lstm-text-classify

./: .gitignore  README.md  demo.py  predict.py  pyproject.toml  train.py
data/: sample_data.csv
docs/: confusion_matrix_guide.md  evaluation_metrics.md
src/: __init__.py  data_processor.py  model.py  predictor.py  trainer.py
