[project]
name = "lstm-text-classify"
version = "0.1.0"
description = "基于LSTM的文本分类项目"
authors = [
    { name = "User", email = "user@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jieba>=0.42.1",
    "tqdm>=4.62.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]